# notely

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile.dev  database.py  enums.py  file_storage.py  main.py  pre_start.py  pyproject.toml  pytest.ini  ruff.toml  settings.py
backend/core/: auth.py  constants.py  enums.py  events.py  routes.py  schemas.py  services.py  utils.py
backend/database/: __init__.py  mongo.conf  setup.js  setup.sh
backend/folders/: constants.py  routes.py  schemas.py  services.py
backend/notes/: constants.py  routes.py  schemas.py  services.py
backend/tests/: conftest.py  test_database.py
backend/tests/core/: test_routes.py  test_services.py
backend/tests/folders/: test_routes.py  test_services.py
backend/tests/notes/: test_routes.py  test_services.py
frontend/: .env.example  Dockerfile.dev  api.ts  app.ts  constants.ts  dom.ts  events.ts  index.html  jest.config.ts  main.ts  package.json  styles.css  tsconfig.json  types.ts  utils.ts  vite.config.ts
frontend/api/: axios.ts  fake.ts  index.ts
frontend/auth/: fake.ts  firebase.ts  index.ts
frontend/components/: Auth.ts  Editor.ts  Sidebar.ts  index.ts
frontend/styles/: auth.css  base.css  editor.css  sidebar.css
frontend/tests/: app.test.ts
frontend/tests/components/: Sidebar.test.ts
